# Tic-tac-toe-Ai

./: .gitignore  Ai_moudle.h  Built.h  CMakeLists.txt  Makefile  README.md  Reset_game.h  Terminal_UI.h  main.cpp  start.cpp  tic-tac-ai.cpp
include/: Ai_module.h  Main.h
src/: Ai_module.h  Built.cpp  Built.h  Main.cpp  Main.h  Reset_game.h  start.cpp
